Fix horizontal scroll bar on Firefox
This was due to restricting the height of the chat input wrapper with a govuk-width-container, then forcing it to be 100vw afterwards. This takes it out of the govuk-width-container

--- a/app/assets/stylesheets/govuk_chat.css
+++ b/app/assets/stylesheets/govuk_chat.css
@@ -139,7 +139,7 @@ header.govuk-header--yellow .govuk-phase-banner {
   font-weight: bold;
 }
 
-.govuk-width-container.govuk-chat-container-wrapper {
+.govuk-chat-container-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
